versioned_docs/version-2.14.0/features/index.md
---
sidebar_position: 1
description: "Zaparoo Core features: mappings, playlists, play controls, hooks, launchers, publishers, game tags, and system configuration."
keywords: [zaparoo features, zaparoo mappings, zaparoo playlists, zaparoo play controls, zaparoo hooks, zaparoo launchers]
---

# Features

Zaparoo Core includes several features that expand what you can do with your tokens and media library. These are user-configurable capabilities that you can enable and customize to suit your setup.

- [Launchers](./launchers.md) - define custom launchers and send launcher control actions to active media
- [Hooks](./hooks.md) - run ZapScript when tokens are scanned, media starts, media exits, or Core becomes ready
- [Mappings](./mappings.md) - assign ZapScript to tokens that can't be written to directly, like Amiibos and barcodes
- [Play Controls](./play-controls.md) - stage disruptive scans and enforce playtime limits
- [Playlists](./playlists.md) - group media or ZapScript actions and move through them with playlist commands
- [Publishers](./publishers.md) - broadcast Core events to MQTT brokers or PixelCade LED displays
- [Systems](./systems.md) - reference of all system IDs used in configuration and ZapScript commands
- [Tags](./tags.md) - metadata labels extracted from filenames used to filter and match games
